Fix text alignment in RadzenToc

--- a/Radzen.Blazor/themes/components/blazor/_toc.scss
+++ b/Radzen.Blazor/themes/components/blazor/_toc.scss
@@ -69,6 +69,7 @@ $rz-toc-link-selected-indicator-border-radius: 0 !default;
     padding-block: var(--rz-toc-link-padding-block);
     padding-inline: var(--rz-toc-link-padding-inline);
     text-decoration: none;
+    text-align: initial;
     font-size: var(--rz-toc-link-font-size);
     font-weight: var(--rz-toc-link-font-weight);
     font-family: inherit;
